--- a/my-primitive-paint/my-primitive-paint/my-primitive-paint.csproj
+++ b/my-primitive-paint/my-primitive-paint/my-primitive-paint.csproj
@@ -45,15 +45,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Circle.cs" />
+    <Compile Include="Ellipse.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ListOfFigures.cs" />
+    <Compile Include="Polygon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MainFigure.cs" />
+    <Compile Include="Rectangle.cs" />
     <Compile Include="Square.cs" />
     <EmbeddedResource Include="Form1.de-IT.resx">
       <DependentUpon>Form1.cs</DependentUpon>
