--- a/my-primitive-paint/my-primitive-paint/my-primitive-paint.csproj
+++ b/my-primitive-paint/my-primitive-paint/my-primitive-paint.csproj
@@ -45,8 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Circle.cs" />
-    <Compile Include="Ellipse.cs" />
+    <Compile Include="CircleFabric.cs" />
+    <Compile Include="EllipseFabric.cs" />
+    <Compile Include="Fabric.cs" />
+    <Compile Include="figures\Circle.cs" />
+    <Compile Include="figures\Ellipse.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,12 +57,14 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="ListOfFigures.cs" />
-    <Compile Include="Polygon.cs" />
+    <Compile Include="figures\Polygon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MainFigure.cs" />
-    <Compile Include="Rectangle.cs" />
-    <Compile Include="Square.cs" />
+    <Compile Include="figures\MainFigure.cs" />
+    <Compile Include="figures\Rectangle.cs" />
+    <Compile Include="figures\Square.cs" />
+    <Compile Include="RectangleFabric.cs" />
+    <Compile Include="SquareFabric.cs" />
     <EmbeddedResource Include="Form1.de-IT.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
