--- a/my-primitive-paint/my-primitive-paint/my-primitive-paint.csproj
+++ b/my-primitive-paint/my-primitive-paint/my-primitive-paint.csproj
@@ -37,6 +37,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,6 +54,7 @@
     <Compile Include="Fabric.cs" />
     <Compile Include="figures\Circle.cs" />
     <Compile Include="figures\Ellipse.cs" />
+    <Compile Include="ForJSON.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
