added possibility to create and draw custom figures

--- a/my-primitive-paint/my-primitive-paint/my-primitive-paint.csproj
+++ b/my-primitive-paint/my-primitive-paint/my-primitive-paint.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CircleFabric.cs" />
+    <Compile Include="CustomFigure.cs" />
     <Compile Include="EditDrawedFigures.cs">
       <SubType>Form</SubType>
     </Compile>
