--- a/my-primitive-paint/my-primitive-paint/my-primitive-paint.csproj
+++ b/my-primitive-paint/my-primitive-paint/my-primitive-paint.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CircleFabric.cs" />
+    <Compile Include="fabrics\CircleFabric.cs" />
     <Compile Include="CustomFigure.cs" />
     <Compile Include="EditDrawedFigures.cs">
       <SubType>Form</SubType>
@@ -58,8 +58,8 @@
       <DependentUpon>EditDrawedFigures.cs</DependentUpon>
     </Compile>
     <Compile Include="Editing.cs" />
-    <Compile Include="EllipseFabric.cs" />
-    <Compile Include="Fabric.cs" />
+    <Compile Include="fabrics\EllipseFabric.cs" />
+    <Compile Include="fabrics\Fabric.cs" />
     <Compile Include="figures\Circle.cs" />
     <Compile Include="figures\Ellipse.cs" />
     <Compile Include="Form1.cs">
@@ -76,8 +76,8 @@
     <Compile Include="figures\MainFigure.cs" />
     <Compile Include="figures\Rectangle.cs" />
     <Compile Include="figures\Square.cs" />
-    <Compile Include="RectangleFabric.cs" />
-    <Compile Include="SquareFabric.cs" />
+    <Compile Include="fabrics\RectangleFabric.cs" />
+    <Compile Include="fabrics\SquareFabric.cs" />
     <EmbeddedResource Include="EditDrawedFigures.resx">
       <DependentUpon>EditDrawedFigures.cs</DependentUpon>
     </EmbeddedResource>
